<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/products"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/ProductsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ProductsWidget"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="32dp"
                        android:visibility="gone"
                        tools:listitem="@layout/product_widget"
                        tools:visibility="visible">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/EmptyProducts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/empty_products"
                        android:textAlignment="center"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/ProgressBarProducts"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:visibility="gone" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/scrollView"
            android:layout_alignBottom="@id/scrollView"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/SyncFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sync"
                app:backgroundTint="@color/primary"
                app:srcCompat="@drawable/sync_24px"
                app:tint="@color/light" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/AddFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                app:backgroundTint="@color/success"
                app:srcCompat="@drawable/add_24px"
                app:tint="@color/light" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>